test/scc/ext/tm/semantic-errors/023.a
023.t:5:9: error: assignment from incompatible pointer type